--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
   "private": true,
   "scripts": {
     "serve": "npm-run-all --parallel serve-json serve-vue",
-    "serve-json": "json-server ./json-server/data.json -w --routes ./json-server/routes.json",
-    "serve-vue": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit --watchAll",
     "test:e2e": "npm-run-all --parallel test:e2e:serve-json test:e2e:vue",
+    "lint": "vue-cli-service lint",
+    "serve-json": "json-server ./json-server/data.json -w --routes ./json-server/routes.json",
+    "serve-vue": "vue-cli-service serve",
     "test:e2e:serve-json": "json-server ./tests/e2e/fixtures/data.json -w --routes ./json-server/routes.json --middlewares ./tests/e2e/support/json-server-reset.js",
-    "test:e2e:vue": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "test:e2e:vue": "vue-cli-service test:e2e"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.24.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-unit-jest": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-plugin-unit-jest": "~4.5.15",
+    "@vue/cli-service": "~4.5.15",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
